# wine-server

./: .env  .env.default  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
docker/: docker-compose.yml
migrations/2020-02-16-232644_init/: down.sql  up.sql
migrations/2020-02-19-072945_init/: down.sql  up.sql
src/: algorithm.rs  db.rs  graphql_resolvers.rs  lib.rs  models.rs  schema.rs
src/graphql/: composition.rs  fruit_condition.rs  mod.rs  red_analysis.rs  review.rs  root_mutation.rs  root_query.rs  user.rs  white_analysis.rs  wine.rs  wine_color.rs
src/models/: composition.rs  country.rs  fruit_condition.rs  grape.rs  mod.rs  producer.rs  red_analysis.rs  region.rs  review.rs  user.rs  white_analysis.rs  wine.rs  wine_color.rs
src/routes/: get_graphiql.rs  get_index.rs  get_login.rs  get_login_page.rs  get_logout.rs  mod.rs  post_graphql.rs
