[package]
name = "wine_server"
version = "0.1.0"
authors = ["Dylan Stewart <dylan.stewart@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
juniper = "0.14.2"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0.48"
log = "0.4.8"
env_logger = "0.7.1"