[package]
name = "wine_server"
version = "0.1.0"
authors = ["Dylan Stewart <dylan.stewart@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "extras"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.15.0"
juniper = "0.14.2"
actix-web = "2.0"
actix-rt = "1.0"
actix-identity = "0.2.1"
serde_json = "1.0.48"
log = "0.4.8"
env_logger = "0.7.1"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
juniper-eager-loading = "0.5.0"
ndarray = "0.13.0"
ndarray-linalg = "0.12.0"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = "0.10.1"
serde_urlencoded = "0.6.1"
serde_derive = "1.0.104"
serde = "1.0.104"
listenfd = "0.3.3"
# async-std = { version = "1.5.0", features = ["attributes"] }
tokio = { version = "0.2.11", features = ["full"] }
jsonwebtoken = "7.0.1"